<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_200sdp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <LinearLayout
        android:id="@+id/llLogIn"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_10sdp"
        android:orientation="horizontal">

        <View
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="2dp"
            android:background="@color/red"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/red"
            android:textSize="@dimen/_10sdp"
            android:includeFontPadding="false"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"/>

        <View
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="2dp"
            android:background="@color/red"/>

    </LinearLayout>

    <EditText
        android:id="@+id/etEmail"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bg_round_button"
        android:layout_width="match_parent"
        android:textColor="@color/red"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/llLogIn"
        android:hint="@string/enter_email"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bg_round_button"
        android:layout_width="match_parent"
        android:textColor="@color/red"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        android:hint="@string/enter_password"/>

    <Button
        android:id="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_round_button"
        android:text="@string/btn_login"
        android:textColor="@color/black"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/llSocial"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:orientation="horizontal">

        <View
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="2dp"
            android:background="@color/red"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/red"
            android:textSize="@dimen/_10sdp"
            android:includeFontPadding="false"
            android:layout_height="wrap_content"
            android:text="@string/or"/>

        <View
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="2dp"
            android:background="@color/red"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnRegister"
        app:layout_constraintTop_toBottomOf="@id/llSocial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_round_button"
        android:text="@string/register"
        android:textColor="@color/black"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>